<resources>
    <string name="app_name">Open Gallery</string>
    <string name="request_storage_permission_denied">Permission to access storage was denied, cannot load album</string>
    <string name="request_storage_permission_title">Request permission</string>
    <string name="request_storage_permission_message">Please accept storage permission to load album</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">com.example.nhvn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="media">Media</string>
    <string name="noname">No name</string>
    <string name="ok">Ok</string>
    <string name="send_to">Send to</string>
    <!--Nav-->
    <string name="albums">Photos</string>
    <string name="videos">Videos</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="hidden_item">Hiden items</string>
    <!--Option-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--Message-->
    <string name="delete_confirm">Delete this?</string>
    <!--Menu-->
    <string name="edit">Edit</string>
    <string name="use_as">Use as Background</string>
    <string name="rename">Rename</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="details">Details</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="rotate">Rotate</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="error_path">Path error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_photos_pager">PhotosPagerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="input_name">Name</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="nhom">Nhóm: 12</string>
    <string name="_version">Version:</string>
    <string name="version">1.0</string>

    <string name="title_activity_videos">VideosActivity</string>

</resources>
