<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/play"
        android:title="@string/play"
        android:icon="@drawable/ic_play_circle_filled_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/use"
        android:title="@string/use_as"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rotate"
        android:title="@string/rotate"
        android:icon="@drawable/ic_rotate_right_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/details"
        android:title="@string/details"
        app:showAsAction="never"/>
    <item
        android:title="@string/more">
        <menu>

        </menu>
    </item>
</menu>